# anna-monorepo

./: CLAUDE.md  README.md
.claude/: settings.local.json
clients/chrome-extension/: pnpm-lock.yaml
clients/chrome-extension/chrome-extension/: manifest.ts  package.json
clients/chrome-extension/chrome-extension/src/background/: constants.ts  index.ts  types.ts
clients/chrome-extension/pages/side-panel/: package.json
clients/chrome-extension/pages/side-panel/src/: SidePanel.tsx
docs/daily/2026-01-13/: ELEMENT_DETECTION_SETUP.md  IMPLEMENTATION_SUMMARY.md  README_ELEMENT_DETECTION.md
docs/langchain/src/: docs.json
docs/langchain/src/langsmith/: agent-server-changelog.mdx  encryption.mdx  export-traces.mdx  filter-traces-in-application.mdx
docs/langchain/src/oss/langgraph/: use-time-travel.mdx
docs/projects/: LANGGRAPH_MIGRATION_COMPLETE.md  MIGRATION_VERIFICATION_REPORT.md
docs/projects/plans/: LANGGRAPH_SERVER_MIGRATION_PLAN.md  chrome-extension-react-agent-plan.md
docs/projects/research/: LANGGRAPH_BROWSER_RESEARCH.md
docs/research/: UIED_Research_Report.md
docs/servers/agents/: PRODUCTION_DEPLOYMENT.md  QUICK_START.md
servers/agents/: .env.example  .gitignore  ELEMENT_DETECTION_STATUS.md  FINAL_STATUS.md  README.md  langgraph.json  pyproject.toml
servers/agents/scripts/: fetch_thread.py  fetch_thread_simple.py  fetch_trace.py  setup_omniparser.sh  update_whatsapp_instruction.py
servers/agents/src/agents/: __init__.py
servers/agents/src/agents/browser_agent/: __init__.py  agent.py  models.py  state.py
servers/agents/src/agents/browser_agent/nodes/: __init__.py  element_detection_node.py  model_node.py  tool_node.py
servers/agents/src/agents/browser_agent/prompts/: __init__.py  system.prompt.md  system.py
servers/agents/src/agents/browser_agent/prompts/skills/: __init__.py  whatsapp-web.skill.prompt.md
servers/agents/src/agents/browser_agent/services/: __init__.py  element_detector.py
servers/agents/src/agents/browser_agent/tools/: __init__.py  browser_tools.py  skill_tools.py
servers/agents/src/agents/chat_agent/: __init__.py  agent.py
servers/agents/src/agents/chat_agent/prompts/: __init__.py  system.prompt.md
servers/agents/src/agents/shared/: __init__.py  prompt_loader.py
servers/agents/tests/browser_agent/: __init__.py  test_agent.py  test_element_detection_integration.py  test_element_detector.py  test_models.py  test_state.py  test_whatsapp_realworld.py
servers/api/: .env.example  .gitignore  pyproject.toml
servers/api/src/api/: main.py
servers/api/src/api/core/: config.py  exceptions.py
servers/api/src/api/datasource/: router.py  schemas.py  service.py
servers/api/src/api/task/: mapper.py  router.py  schemas.py  service.py
servers/api/tests/: README.md  conftest.py  test_task_api.py
servers/data/: .env.example  .gitignore  alembic.ini  pyproject.toml
servers/data/scripts/: update_whatsapp_instruction.py
servers/extension_agent/: README.md  langgraph.json
servers/extension_agent.backup/: .env  pyproject.toml
servers/extension_agent.backup/src/extension_agent/: __init__.py  agent.py
servers/extension_agent.backup/src/extension_agent/nodes/: model_node.py  tool_node.py
servers/extension_agent.backup/src/extension_agent/tools/: browser_tools.py
servers/extension_agent.backup/tests/: __init__.py  test_models.py
servers/extension_agent/.langgraph_api/: .langgraph_ops.pckl
servers/extension_agent/src/extension_agent/: models.py  state.py
servers/extension_agent/tests/: test_agent.py  test_state.py
(+11 files in other folders)
