[project]
name = "agents"
version = "0.1.0"
description = "LangGraph agents server for ANNA (browser automation, task management, etc.)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.hatch.build.targets.editable]
packages = ["src/agents"]

[tool.hatch.build]
sources = ["src"]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
