[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for ANNA task management"
authors = [
    { name = "Galih Laras Prakoso", email = "galih@braidapp.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "data",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
data = { path = "../data", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
