[project]
name = "data"
version = "0.1.0"
description = "Shared data layer for ANNA (database models and migrations)"
authors = [
    { name = "Galih Laras Prakoso", email = "galih@braidapp.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
